<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fit_colorPureWhite"
    tools:context=".fitActivity.FitLoginBackActivity">

    <TextView
        android:id="@+id/LogInBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/fit_ic_keyboard_arrow_left_black_24dp"
        android:gravity="center"
        android:padding="@dimen/fit_spacing_standard_1"
        android:text="@string/fit_back"
        android:textColor="@color/fit_colorTextPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/LogInBack"
        android:padding="@dimen/fit_spacing_large">

        <com.amit.fieldcode.fitUtils.FitCircleImageView
            android:id="@+id/imgUserImage"
            android:layout_width="@dimen/fit_spacing_70"
            android:layout_height="@dimen/fit_spacing_70"
            android:layout_centerHorizontal="true"
            android:src="@drawable/fit_athlete_user" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgUserImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fit_spacing_standard_new"
            android:text="@string/fit_welcome_back_miranda"
            android:textAlignment="center"
            android:textAppearance="@style/fit_FontStyleBold"
            android:textSize="@dimen/fit_font_size_xxxlarge" />

        <TextView
            android:id="@+id/txtLBSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUserName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fit_spacing_10"
            android:text="@string/fit_log_back_into_your_account"
            android:textColor="@color/fit_colorTextSecondary"
            android:textSize="@dimen/fit_font_size_small" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtBackEmail"
            style="@style/fit_EditTextStyle"
            android:layout_below="@id/txtLBSubTitle"
            android:layout_marginTop="@dimen/fit_spacing_large"
            android:drawableStart="@drawable/fit_ic_mail"
            android:hint="@string/fit_email"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtBackPassword"
            style="@style/fit_EditTextStyle"
            android:layout_below="@id/edtBackEmail"
            android:backgroundTint="@color/fit_colorBottomEditTextLine"
            android:drawableStart="@drawable/fit_ic_lock"
            android:hint="@string/fit_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/backShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtBackEmail"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/fit_spacing_10"
            android:onClick="backShowPassword"
            android:text="@string/fit_show" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackLogin"
            style="@style/fit_ButtonStyle"
            android:layout_below="@id/edtBackPassword"
            android:backgroundTint="@color/fit_colorPrimaryDark"
            android:text="@string/fit_log_in"
            app:cornerRadius="@dimen/fit_spacing_standard" />

        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnBackLogin"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/fit_spacing_standard_new"
            android:text="@string/fit_forget_password" />

    </RelativeLayout>

    <include layout="@layout/fit_layout_bottomtextview" />
</RelativeLayout>