<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:barchart="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fit_colorPureWhite"
    android:overScrollMode="never"
    tools:context=".fitFragment.FitTrainingStatisticsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statisticsBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/fit_ic_keyboard_arrow_left_pink_24dp"
            android:drawablePadding="@dimen/fit_spacing_10"
            android:gravity="center"
            android:padding="@dimen/fit_spacing_standard_1"
            android:text="@string/fit_training"
            android:textColor="@color/fit_colorPrimaryDark" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/edittrainingStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/fit_spacing_standard_1"
            android:src="@drawable/fit_ic_more_horiz_pink_24dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trainingDayRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtTrainingDay"
            android:background="@color/fit_colorGrey"
            android:layoutAnimation="@anim/fit_layout_fall_down"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/txtTrainingDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/statisticsBack"
            android:background="@color/fit_colorGrey"
            android:paddingStart="@dimen/fit_spacing_standard_1"
            android:paddingTop="@dimen/fit_spacing_10"
            android:text="@string/fit_training_day" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trainingDayRecycler"
            android:layout_marginStart="@dimen/fit_spacing_standard_1"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/fit_spacing_standard_1">

            <TextView
                android:id="@+id/txtStatistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fit_spacing_10"
                android:text="@string/fit_statistics"
                style="@style/fit_heading_text" />

            <TextView
                android:id="@+id/txtShowAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/fit_spacing_standard_1"
                android:text="@string/fit_show_all" />

            <LinearLayout
                android:id="@+id/lineartraining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bar_chart_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fit_spacing_control"
                    android:paddingTop="@dimen/fit_spacing_standard_1"
                    android:paddingEnd="@dimen/fit_spacing_standard_1"
                    android:paddingBottom="@dimen/fit_spacing_standard_1"
                    android:text="@string/fit_8_00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fit_spacing_control"
                    android:padding="@dimen/fit_spacing_standard_1"
                    android:text="@string/fit_13_00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fit_spacing_control"
                    android:padding="@dimen/fit_spacing_standard_1"
                    android:text="@string/fit_15_00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fit_spacing_control"
                    android:padding="@dimen/fit_spacing_standard_1"
                    android:text="@string/fit_20_00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/fit_spacing_control"
                    android:padding="@dimen/fit_spacing_standard_1"
                    android:text="@string/fit_23_00" />

            </LinearLayout>

            <View
                android:id="@+id/trainingLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/lineartraining"
                android:layout_marginBottom="@dimen/fit_spacing_standard_new"
                android:background="@color/fit_colorBottomEditTextLine" />


            <me.ithebk.barchart.BarChart
                android:id="@+id/bar_chart_vertical"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/fit_spacing_140"
                android:layout_below="@id/txtStatistics"
                android:layout_marginTop="@dimen/fit_spacing_standard_new"
                barchart:bar_color="@color/fit_colorPrimaryDark"
                barchart:bar_max_value="100"
                barchart:bar_show_animation="true"
                barchart:bar_show_auto_color="false"
                barchart:bar_show_value="false"
                barchart:bar_spaces="@dimen/fit_spacing_standard"
                barchart:bar_text_color="#808080"
                barchart:bar_text_size="@dimen/fit_font_size_nano"
                barchart:bar_type="vertical"
                barchart:bar_width="@dimen/fit_spacing_10" />

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainingLine1"
                android:text="@string/fit_distance" />

            <TextView
                android:id="@+id/lblAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainingLine1"
                android:layout_marginStart="@dimen/fit_spacing_xxlarge"
                android:layout_toEndOf="@id/txtDistance"
                android:text="@string/fit_calories" />

            <TextView
                android:id="@+id/lblrating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainingLine1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/fit_spacing_30"
                android:text="@string/fit_time" />

            <!--            -->

            <TextView
                android:id="@+id/trainerDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDistance"
                android:text="@string/fit_30km"
                android:textAppearance="@style/fit_FontStyleMedium"
                android:textColor="@color/fit_colorTextPrimary"
                android:textSize="@dimen/fit_font_size_normal" />

            <TextView
                android:id="@+id/trainerCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblAge"
                android:layout_alignStart="@+id/lblAge"
                android:layout_toEndOf="@id/trainerDistance"
                android:text="@string/fit_160_5kcal"
                android:textAppearance="@style/fit_FontStyleMedium"
                android:textColor="@color/fit_colorTextPrimary"
                android:textSize="@dimen/fit_font_size_normal" />

            <TextView
                android:id="@+id/trainerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblrating"
                android:layout_alignStart="@id/lblrating"
                android:layout_alignParentEnd="true"
                android:text="@string/fit_1_03_30"
                android:textAppearance="@style/fit_FontStyleMedium"
                android:textColor="@color/fit_colorTextPrimary"
                android:textSize="@dimen/fit_font_size_normal" />

            <View
                android:id="@+id/trainingLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/trainerCalories"
                android:layout_marginTop="@dimen/fit_spacing_10"
                android:layout_marginBottom="@dimen/fit_spacing_10"
                android:background="@color/fit_colorBottomEditTextLine" />

            <TextView
                android:id="@+id/txtActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trainingLine2"
                android:text="@string/fit_activities"
                style="@style/fit_heading_text"  />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtActivity"
                android:layout_marginTop="@dimen/fit_spacing_standard_1"
                android:layout_marginBottom="@dimen/fit_spacing_standard_new"
                android:layoutAnimation="@anim/fit_layout_fall_down"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>